--- a/demo.html
+++ b/demo.html
@@ -35,8 +35,8 @@
 
         <!-- Font size adjustment -->
         <div class="font-controls">
-            <button">A-</button>
-            <button">A+</button>
+            <button>A-</button>
+            <button>A+</button>
         </div>
     </div>
 
