--- a/demo.html
+++ b/demo.html
@@ -11,9 +11,10 @@
     <div class="container">
         <div class="theme-switch">
             <label for="theme">Dark Mode</label>
-            <input type="checkbox" id="theme" >
+            <input type="checkbox" id="theme" onchange="toggleTheme()">
         </div>
         <h1>Quote Generator</h1>
+
         <!-- Dark Mode Switch -->
         <div class="quote-box">
             <p id="quote-text">Select a category to view quotes!</p>
@@ -21,24 +22,24 @@
         
         <!-- Category Selection -->
         <label for="category">Choose a category:</label>
-        <select id="category" >
+        <select id="category" onchange="changeCategory()" >
             <option value="science">Science</option>
             <option value="inspiration">Inspiration</option>
         </select>
         
         <!-- Navigation Buttons -->
         <div class="buttons">
-            <button>Previous</button>
-            <button>Next</button>
-            <button>Random</button>
+            <button onclick="prevQuote()">Previous</button>
+            <button onclick="nextQuote()">Next</button>
+            <button onclick="randomQuote()">Random</button>
         </div>
 
         <!-- Font size adjustment -->
         <div class="font-controls">
-            <button>A-</button>
-            <button>A+</button>
+            <button onclick="decreaseFontSize()">A-</button>
+            <button onclick="increaseFontSize()">A+</button>
         </div>
     </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
